--- a/Project/Frontend/resume/resume.css
+++ b/Project/Frontend/resume/resume.css
@@ -3,5 +3,69 @@ html{
     font-family: "Poppins", sans-serif;
 }
 body{
-    background-color: #f2f3f5;
+    background: url("../img/bg.jpg")no-repeat;
+}
+.bot{
+    text-align: center;
+    margin-top: 50px;
+}
+.buttonBack{
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border: 0;
+    outline: none;
+    background-color: hsl(85, 74%, 45%);
+    display: inline-;
+    width: 20%;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    margin: 5px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    box-shadow: 0 5px 10px 0 rgba(130, 201, 30, 0.5);
+   
+}
+.buttonGenerate{
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border: 0;
+    outline: none;
+    background-color: hsl(85, 74%, 45%);
+    display: inline-block;
+    width: 40%;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    margin: 5px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    box-shadow: 0 5px 10px 0 rgba(130, 201, 30, 0.5);
+   
+}
+.buttonNext{
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border: 0;
+    outline: none;
+    background-color: hsl(85, 74%, 45%);
+    display: inline-block;
+    width: 20%;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    margin: 5px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    box-shadow: 0 5px 10px 0 rgba(130, 201, 30, 0.5);
+   
 }
